Add Kotlin compile options for JDK 24